[package]
name = "cobalt-async"
version = "0.3.0"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of helpful functions for working with async Rust."
repository = "https://github.com/harrison-ai/cobalt-async/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
]

[dependencies]
futures = "0.3.21"

[dev-dependencies]
anyhow = "1.0.60"
tokio = { version = "1.21.2", features=["macros"] }
tokio-test = "0.4.2"
