[package]
name = "cobalt-async"
version = "0.3.0"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of helpful functions for working with async Rust."
repository = "https://github.com/harrison-ai/cobalt-async/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
]

[dependencies]
futures = "0.3.25"

[dev-dependencies]
anyhow = "1.0.66"
tokio = { version = "1.22.0", features=["macros"] }
tokio-test = "0.4.2"
