[package]
name = "cobalt-async"
version = "0.4.0"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of helpful functions for working with async Rust."
repository = "https://github.com/harrison-ai/cobalt-async/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
]

[features]
# No features on by default
default = []

# Shorthand for enabling everything
full = ["checksum"]

checksum = ["crc32fast", "anyhow"]

[dependencies]
anyhow = { version = "1.0.66", optional = true }
crc32fast = { version = "1.3.2", optional=true }
futures = "0.3.25"
pin-project-lite = "0.2.9"

[dev-dependencies]
anyhow = "1.0.66"
tokio = { version = "1.37.0", features=["macros"] }
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

